changed links and favicon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <title>Tomas Guardo - Front-end dev</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/web-programming.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" 
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" 
         crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li><a class="link-styled" href="#description">Descripcion</a></li>
-            <li><a class="link-styled" href="#projects">Projectos</a></li>
+            <li><a class="link-styled" href="#projects">Proyectos</a></li>
             <li><a class="link-styled" href="#contact">Contacto</a></li>
         </ul>
         <button class="burger">
@@ -46,7 +46,7 @@
                 <div class="container">
 
                     <div class="blockWhite"></div>
-                    <h2 class="my-title">Desarrollador Front-End con gusto por el diseno</h2>
+                    <h2 class="my-title">Desarrollador Front-End con gusto por el diseño</h2>
                 </div>
             </div>
 
@@ -56,8 +56,8 @@
 
                     <a class="social-icon" href="https://github.com/Tomig02"><i class="fab fa-github fa-2x"></i></a>
                     <a class="social-icon" href="https://codepen.io/Tomig02"><i class="fab fa-codepen fa-2x"></i></a>
-                    <a class="social-icon" href=""><i class="fab fa-linkedin fa-2x"></i></a>
-                    <a class="social-icon" href=""><i class="far fa-file fa-2x"></i></a>
+                    <a class="social-icon" href="https:www.linkedin.com/in/tomasguardo"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a class="social-icon" href="https://drive.google.com/file/d/18ZBO6MYSfQtmWUEAdIZCx3MtkqkC72qu/view?ths=true"><i class="far fa-file fa-2x"></i></a>
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
                                 y a usar Librerias de terceros.</p>
                             <div class="btn-group">
                                 <a href="https://romantic-varahamihira-198acf.netlify.app/" class="btn-styled">Website <div><i class="fas fa-globe-americas"></i></div></a>
-                                <a href="https://github.com/Tomig02/Red-Peliculas" class="btn-styled">Code <div><i class="fas fa-code"></i></div></a>
+                                <a href="https://github.com/Tomig02/Red-Peliculas" class="btn-styled">Codigo <div><i class="fas fa-code"></i></div></a>
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                                 ademas de aprender sobre el server side rendering.</p>
                             <div class="btn-group">
                                 <a href="https://website-coffee-express.herokuapp.com/" class="btn-styled">Website <div><i class="fas fa-globe-americas"></i></div></a>
-                                <a href="https://github.com/Tomig02/full-website-coffee" class="btn-styled">Code <div><i class="fas fa-code"></i></div></a>
+                                <a href="https://github.com/Tomig02/full-website-coffee" class="btn-styled">Codigo <div><i class="fas fa-code"></i></div></a>
                             </div>
                         </div>
                     </div>
@@ -143,8 +143,8 @@
                                 para este proyecto use solo HTML, CSS(SCSS) y JavaScript. <br/> Con este proyecto pude 
                                 profundizar y ampliar mis conocimientos en los lenguajes fundamentales.</p>
                             <div class="btn-group">
-                                <a href="https://clever-almeida-cdc596.netlify.app/" class="btn-styled">Website <div><i class="fas fa-globe-americas"></i></div></a>
-                                <a href="https://github.com/Tomig02/Sports-Shop-Website" class="btn-styled">Code <div><i class="fas fa-code"></i></div></a>
+                                <a href="https://xenodochial-visvesvaraya-ce1104.netlify.app/" class="btn-styled">Website <div><i class="fas fa-globe-americas"></i></div></a>
+                                <a href="https://github.com/Tomig02/Sports-Shop-Website" class="btn-styled">Codigo <div><i class="fas fa-code"></i></div></a>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                 pasos como desarrollador.</p>
                             <div class="btn-group">
                                 <a href="https://inspiring-cray-f59f4d.netlify.app/" class="btn-styled">Website <div><i class="fas fa-globe-americas"></i></div></a>
-                                <a href="https://github.com/Tomig02/Sitio-Marketing" class="btn-styled">Code <div><i class="fas fa-code"></i></div></a>
+                                <a href="https://github.com/Tomig02/Sitio-Marketing" class="btn-styled">Codigo <div><i class="fas fa-code"></i></div></a>
                             </div>
                         </div>
                     </div>
