--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <a class="social-icon" href="https://github.com/Tomig02"><i class="fab fa-github fa-2x"></i></a>
                     <a class="social-icon" href="https://codepen.io/Tomig02"><i class="fab fa-codepen fa-2x"></i></a>
-                    <a class="social-icon" href="https:www.linkedin.com/in/tomasguardo"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/tomasguardo"><i class="fab fa-linkedin fa-2x"></i></a>
                     <a class="social-icon" href="https://drive.google.com/file/d/18ZBO6MYSfQtmWUEAdIZCx3MtkqkC72qu/view?ths=true"><i class="far fa-file fa-2x"></i></a>
                 </div>
             </div>
